feat: clean archictecture finished
